--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body{
-	background-color: #E8D5D5
+	background-color: #E8D5D5;
+	font-family:"Raleway", "sans serif";
 }
 
 .nav{
-background-color: #AA78A6
+background-color: #AA78A6;
 }
 
