--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-	background-color: #E8D5D5;
-	font-family:"Helvetica", "sans serif";
+	background-color: #E6DBD0;
+	font-family:"Raleway", "sans serif";
 }
 
 .nav{
